# BAD

./: CMakeLists.txt  Makefile  README.md  package.xml  plotadmittance.py  script.bash
barrett_can/: CANbus.cpp  CANbus.h
include/: badConfig.h.in
include/bad/: BarrettHand.h  BarrettHandSim.h  HighLevelBAD.h  kinematics.h
src/: .CANbus.hh.swp  BarrettHand.cpp  BarrettHand.h  BarrettHandSim.cpp  BarrettHandSim.h  CANbus.cpp  CANbus.h  CANbus_RT.cpp  HighLevelBAD.cpp  HighLevelBAD.h  admittance.cpp  bad.cpp  bad_logger.cpp  barrett_properties.h  examples.cpp  examples.h  extra_library.cpp  extra_library.h  kinematics.cpp  kinematics.h
